--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 	
 	<div class="header">
-		<a class="pageHeader" href="home.html"><div><b>HTML Task</b></div></a>
+		<a class="pageHeader" href="index.html"><div><b>HTML Task</b></div></a>
 
 		<div class="navBar">
 			<a href="ai.html"><div style="background-color: #FF4040"><h2>Artifical Intelligence</h2></div></a>
-			<a href="algorithms.html"><div style="background-color: #44ff3d"><h2>Algorithms</h2></div></a>
-			<a href="pccomponents.html"><div style="background-color: #3a56ff"><h2>PC Components</h2></div></a>
+			<a href="index.html"><div style="background-color: #44ff3d"><h2>[placeholder]</h2></div></a>
+			<a href="index.html"><div style="background-color: #3a56ff"><h2>[placeholder]</h2></div></a>
 		</div>
 	</div>
 
