Add link to source on home page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
 	<p>This is the homepage for my website! Use the navigation bar at the top to go to the other pages. Click the header to return to this page!</p>
 
+	<a href="https://github.com/ChrissieBlossom/CS-Class-HTML-Task">Link to source on Github</a>
 
 </body>
 </html>
