Added transparency to the header (how fancy hehehe)

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 		<a class="pageHeader" href="index.html"><div><b>HTML Task</b></div></a>
 
 		<div class="navBar">
-			<a href="ai.html"><div style="background-color: #FF4040"><h2>Artifical Intelligence</h2></div></a>
-			<a href="index.html"><div style="background-color: #44ff3d"><h2>[placeholder]</h2></div></a>
-			<a href="index.html"><div style="background-color: #3a56ff"><h2>[placeholder]</h2></div></a>
+			<a href="ai.html"><div style="background-color: #FF4040B2"><h2>Artifical Intelligence</h2></div></a>
+			<a href="index.html"><div style="background-color: #44ff3db2"><h2>[placeholder]</h2></div></a>
+			<a href="index.html"><div style="background-color: #3a56ffb2"><h2>[placeholder]</h2></div></a>
 		</div>
 	</div>
 
