--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>Home</title>
+	<title>CS Home</title>
 	<link href="images/favicon.ico" rel="icon" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
 
