Added new page about hazbin characters

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 		<div class="navBar">
 			<a href="ai.html"><div style="background-color: #FF4040B2"><h2>Artifical Intelligence</h2></div></a>
-			<a href="index.html"><div style="background-color: #44ff3db2"><h2>[placeholder]</h2></div></a>
+			<a href="best-hazbin-hotel-characters.html"><div style="background-color: #44ff3db2"><h2>Best HH Characters</h2></div></a>
 			<a href="index.html"><div style="background-color: #3a56ffb2"><h2>[placeholder]</h2></div></a>
 		</div>
 	</div>
