--- a/index.html
+++ b/index.html
@@ -12,20 +12,16 @@
 
 <body>
 	
-	<div class="header">
-		<a class="pageHeader" href="index.html"><div><b>HTML Task</b></div></a>
+	<header><h1>College HTML</h1></header>
 
-		<div class="navBar">
-			<a href="ai.html"><div style="background-color: #FF4040B2"><h2>Artifical Intelligence</h2></div></a>
-			<a href="best-hazbin-hotel-characters.html"><div style="background-color: #44ff3db2"><h2>Best HH Characters</h2></div></a>
-			<a href="index.html"><div style="background-color: #3a56ffb2"><h2>[placeholder]</h2></div></a>
-		</div>
-	</div>
-
-
-	<p>This is the homepage for my website! Use the navigation bar at the top to go to the other pages. Click the header to return to this page!</p>
-
-	<p><a href="https://github.com/ChrissieBlossom/CS-Class-HTML-Task">Link to source on Github</a></p>
+	<section id="content">
+		<nav>
+			<p>sidebar</p>
+		</nav>
+		<article>
+			<p>article</p>
+		</article>
+	</section>
 
 </body>
 </html>
