--- a/index.html
+++ b/index.html
@@ -11,17 +11,86 @@
 </head>	
 
 <body>
-	
+
 	<header><h1>College HTML</h1></header>
 
 	<section id="content">
 		<nav>
 			<p>sidebar</p>
+
+			<p>sidebar</p><p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p><p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+			<p>sidebar</p>
+
 		</nav>
 		<article>
 			<p>article</p>
 		</article>
+
+
 	</section>
+
+	<footer>
+		<p>test</p>
+	</footer>
 
 </body>
 </html>
