Edit index.html and style.css

--- a/index.html
+++ b/index.html
@@ -16,81 +16,23 @@
 
 	<section id="content">
 		<nav>
-			<p>sidebar</p>
+			<div>sidebar</div>
 
-			<p>sidebar</p><p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p><p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
-			<p>sidebar</p>
+			<div>sidebar</div>
+			<div>sidebar</div>
+			<div>sidebar</div>
+			
 
 		</nav>
 		<article>
+			<p>article</p>
+			<img src="images/ai.jpg">
 			<p>article</p>
 		</article>
 
 
 	</section>
 
-	<footer>
-		<p>test</p>
-	</footer>
 
 </body>
 </html>
