--- a/index.html
+++ b/index.html
@@ -5,34 +5,31 @@
 	<link href="images/favicon.ico" rel="icon" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
 
+
 	<link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	
+	
+
 </head>	
 
 <body>
 
+	<iframe id="doc_names" class="hidden" src="filenames.txt"></iframe>
+
 	<header><h1>College HTML</h1></header>
 
 	<section id="content">
-		<nav>
-			<div>sidebar</div>
-
-			<div>sidebar</div>
-			<div>sidebar</div>
-			<div>sidebar</div>
-			
-
+		<nav id="navbar">
 		</nav>
-		<article>
-			<p>article</p>
-			<img src="images/ai.jpg">
-			<p>article</p>
+		<article id="bodytext">
 		</article>
 
 
 	</section>
 
+	<script src="script.js"></script>
 
 </body>
 </html>
