--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>CS Home</title>
 	<link href="images/favicon.ico" rel="icon" type="image/x-icon">
 	<link rel="stylesheet" href="style.css">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
