--- a/index.html
+++ b/index.html
@@ -19,15 +19,23 @@
 	<iframe id="doc_names" class="hidden" src="filenames.txt"></iframe>
 
 	<header><h1>College HTML</h1></header>
+	
 
-	<section id="content">
+	<div>
 		<nav id="navbar">
 		</nav>
-		<article id="bodytext">
-		</article>
+
+		<section id="content">
+
+			<div id="flexboxforformatting"></div>
+
+			<article id="bodytext">
+			</article>
 
 
-	</section>
+		</section>
+	</div>
+	
 
 	<script src="script.js"></script>
 
