Added link to source code

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<div id="flexboxforformatting"></div>
 
 			<article id="bodytext">
+				<a href="https://github.com/ChrissieBlossom/CS-Class-HTML-Task/tree/master">Source code for page on GitHub</a>
 			</article>
 
 
