--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	<!-- Creates iframe that holds the filenames of the documents so that they can be read with the javascript -->
 	<iframe id="doc_names" class="hidden" src="filenames.txt"></iframe>
 
-	<header><h1>College HTML</h1></header>
+	<header id="header"><h1>College HTML</h1></header>
 	
+	<img id="toggle" src="images/toggle.png" onclick="darkMode()">
 
 	<div>
 		<nav id="navbar">
