Added dark mode toggle

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<div id="flexboxforformatting"></div>
 
 			<article id="bodytext">
+				<p>If the menu items are not apearing, try reloading the page!</p>
 				<a href="https://github.com/ChrissieBlossom/CS-Class-HTML-Task/tree/master">Source code for page on GitHub</a>
 			</article>
 
@@ -37,7 +38,9 @@
 	</div>
 	
 
-	<script src="script.js"></script>
+	
 
 </body>
+
 </html>
+<script src="script.js"></script>
