--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+	
 </head>	
 
 <body>
@@ -44,3 +46,4 @@
 
 </html>
 <script src="script.js"></script>
+<script src="darkMode.js"></script>
