--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<div id="flexboxforformatting"></div>
 
 			<article id="bodytext">
-				<p>If the menu items are not apearing, try reloading the page!</p>
-				<a href="https://github.com/ChrissieBlossom/CS-Class-HTML-Task/tree/master">Source code for page on GitHub</a>
+				<h1>Loading...</h1>
+
 			</article>
 
 
