Add message on load screen

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
 			<article id="bodytext">
 				<h1>Loading...</h1>
+				<p><em>If this lasts longer than a few seconds, try reloading. If that doesn't work, make sure you have Javascript enabled</em></p>
 
 			</article>
 
