--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Creates iframe that holds the filenames of the documents so that they can be read with the javascript -->
 	<iframe id="doc_names" class="hidden" src="filenames.txt"></iframe>
 
-	<header id="header"><h1>College HTML</h1></header>
+	<header id="header"><h1>CS Topics</h1></header>
 	
 	<img id="toggle" src="images/toggle.png" onclick="darkMode()">
 
